--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.1.7",
+    "@mantine/dates": "^7.2.0",
     "@mantine/form": "^7.1.7",
     "@mantine/hooks": "^7.1.7",
     "@reduxjs/toolkit": "^1.9.7",
