--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,29 @@
         "namedComponents": "arrow-function",
         "unnamedComponents": "arrow-function"
       }
+    ],
+    "no-console": "warn",
+    "import/order": [
+      "warn",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "index",
+          "object",
+          "type"
+        ],
+        "pathGroups": [
+          {
+            "pattern": "./*.css",
+            "group": "sibling",
+            "position": "after"
+          }
+        ]
+      }
     ]
   }
 }
