--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^7.1.7",
     "@mantine/hooks": "^7.1.7",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.1",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
